# otel-chain

./: .gitignore  README.md  docker-compose.yml  node-start.sh  otel-chain-env-vars.env
dotnet/dotnet-chain/: Dockerfile  Program.cs  Startup.cs  dotnet-chain.csproj
dotnet/dotnet-chain/Controllers/: DotnetChainController.cs
dotnet/dotnet-chain/Properties/: launchSettings.json
go/: Dockerfile  client.go  go-chain.go  go.mod  go.sum  main-server.go  main.go
go/old/: server.go
java/otelChain/: Dockerfile  pom.xml  run.sh
java/otelChain/src/main/java/com/ktully/otelChain/: OtelChainApplication.java  OtelTracerConfig.java
java/otelChain/src/main/java/com/ktully/otelChain/Controller/: Controller.java
java/otelChain/src/main/resources/: application.properties
java/otelChain/src/test/java/com/ktully/otelChain/: OtelChainApplicationTests.java
node/: Dockerfile  app.js  bak_app.js  bak_tracing.js  package-lock.json  package.json  tracing.js
php/: composer.json  example.php
php/dev/: Dockerfile  build.sh  run.sh
python/: Dockerfile  pip3_otel.sh  pip3_otel.txt  requirements.txt
python/src/: python-chain.py
ruby/: Dockerfile  Gemfile  README.md  ruby-chain.rb  test.sh
rust/rust-chain-actix/: Cargo.toml
rust/rust-chain-actix/src/: rust-chain-actix.rs
rust/rust-chain-hyper/: Cargo.toml  Dockerfile
rust/rust-chain-hyper/src/: rust-chain-hyper-update-attempt.rs.bak  rust-chain-hyper.rs
rust/rust-chain-rocket/: Cargo.toml
